WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219887
[Mac] Numerous webgl tests time out with WebM format reader enabled
https://bugs.webkit.org/show_bug.cgi?id=219887
Summary
[Mac] Numerous webgl tests time out with WebM format reader enabled
Andy Estes
Reported
2020-12-15 00:14:37 PST
[Mac] Numerous webgl tests time out with WebM format reader enabled
Attachments
Patch
(23.40 KB, patch)
2020-12-15 00:31 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(23.96 KB, patch)
2020-12-15 00:43 PST
,
Andy Estes
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(23.96 KB, patch)
2020-12-15 00:47 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(23.96 KB, patch)
2020-12-15 07:28 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-12-15 00:31:43 PST
Created
attachment 416228
[details]
Patch
Andy Estes
Comment 2
2020-12-15 00:43:34 PST
Created
attachment 416229
[details]
Patch
Andy Estes
Comment 3
2020-12-15 00:47:46 PST
Created
attachment 416230
[details]
Patch
Andy Estes
Comment 4
2020-12-15 07:28:48 PST
Created
attachment 416243
[details]
Patch
EWS
Comment 5
2020-12-15 08:41:08 PST
Committed
r270841
: <
https://trac.webkit.org/changeset/270841
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416243
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-12-15 08:42:19 PST
<
rdar://problem/72343306
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug