[Mac] Numerous webgl tests time out with WebM format reader enabled https://bugs.webkit.org/show_bug.cgi?id=219887

Reviewed by Eric Carlson.

Source/WebCore:

Covered by existing tests.

* platform/graphics/TrackPrivateBase.cpp:
(WebCore::TrackPrivateBase::trackUID const):
* platform/graphics/TrackPrivateBase.h:
* platform/graphics/cocoa/AudioTrackPrivateWebM.cpp:
(WebCore::AudioTrackPrivateWebM::id const):
(WebCore::AudioTrackPrivateWebM::trackUID const):
* platform/graphics/cocoa/AudioTrackPrivateWebM.h:
* platform/graphics/cocoa/VideoTrackPrivateWebM.cpp:
(WebCore::VideoTrackPrivateWebM::id const):
(WebCore::VideoTrackPrivateWebM::trackUID const):
* platform/graphics/cocoa/VideoTrackPrivateWebM.h:

Added a way to get the track ID as an optional uint64_t.

* platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::callOnMainThreadCallback):
(WebCore::SourceBufferParserWebM::SourceBufferParserWebM):
(WebCore::SourceBufferParserWebM::appendData):
(WebCore::SourceBufferParserWebM::OnClusterBegin):
(WebCore::SourceBufferParserWebM::provideMediaData):
(WebCore::SourceBufferParserWebM::setCallOnClientThreadCallback):
* platform/graphics/cocoa/SourceBufferParserWebM.h:

Added a way for SourceBufferParserWebM clients to customize the thread on which callbacks
are invoked.

Source/WebKit:

When rendering a video frame to canvas, SampleCursor is invoked on the main thread in
order to find a sync frame to render. This triggered an ASSERT(!isMainThread()) in debug
builds, and possibly a deadlock if the cursor pointed to a sample that hadn't yet been
parsed (because SourceBufferParser calls the 'didProvideMediaData' callback on the main
thread).

Resolve this by having SourceBufferParser provide parsed samples on a background queue. To
avoid creating AtomStrings on this non-main queue, teach TrackReader to access the trackID
as a uint64_t instead.

* Shared/mac/MediaFormatReader/FormatReader.cpp:
(WebKit::FormatReader::startOnMainThread):
(WebKit::readerQueue):
(WebKit::FormatReader::parseByteSource):
(WebKit::FormatReader::didParseTracks):
(WebKit::FormatReader::didProvideMediaData):
(WebKit::FormatReader::finishParsing):
(WebKit::FormatReader::copyTrackArray):
* Shared/mac/MediaFormatReader/TrackReader.cpp:
(WebKit::MediaSampleByteRange::MediaSampleByteRange):
(WebKit::TrackReader::create):
(WebKit::TrackReader::storageQueue):
(WebKit::TrackReader::TrackReader):
(WebKit::TrackReader::addSample):
(WebKit::TrackReader::waitForSample const):
(WebKit::TrackReader::finishParsing):
(WebKit::TrackReader::finalize):
* Shared/mac/MediaFormatReader/TrackReader.h:


Canonical link: https://commits.webkit.org/232482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270841 268f45cc-cd09-0410-ab3c-d52691b4dbfc