Source/WebCore/platform/graphics/TrackPrivateBase.cpp
@@ -33,6 +33,11 @@
 
 namespace WebCore {
 
+Optional<uint64_t> TrackPrivateBase::trackUID() const
+{
+    return WTF::nullopt;
+}
+
 #if !RELEASE_LOG_DISABLED
 
 static uint64_t s_uniqueId = 0;
