Source/WebCore/platform/graphics/cocoa/VideoTrackPrivateWebM.h
@@ -41,6 +41,7 @@ public:
     AtomString label() const final;
     AtomString language() const final;
     int trackIndex() const final;
+    Optional<uint64_t> trackUID() const final;
 
 private:
     VideoTrackPrivateWebM(webm::TrackEntry&&);
